--- a/src/compare.scss
+++ b/src/compare.scss
@@ -25,21 +25,36 @@
         max-width: 100%;
         height: 100%;
         max-height: 100%;
-    }
-    .cmp_div[n='1'] {
-        z-index: 100;
-        // width: 300px;
-        border-right: 2px solid red;
+        
+        transition: width 0.1s;
     }
     
+    .cmp_img , .cmp_vid {
+        max-width: 100%;
+        max-height: 100%;
+        
+        image-rendering: pixelated;
+        // image-rendering: crisp-edges;
+    } 
+    
+    
+    
+    // .cmp_div[n='1'] {
+    //     z-index: 100;
+    //     // width: 300px;
+    //     border-right: 2px solid red;
+    // }
+/*    
     .cmp_div[n='1'] {
-		animation-name: moveright; // 动画名称
-		animation-direction: alternate; // 动画在奇数次（1、3、5...）正向播放，在偶数次（2、4、6...）反向播放。
-		animation-timing-function: ease-in; // 动画执行方式，linear：匀速；ease：先慢再快后慢；ease-in：由慢速开始；ease-out：由慢速结束；ease-in-out：由慢速开始和结束；
-		animation-delay: 0s; // 动画延迟时间
-		animation-iteration-count: infinite; //  动画播放次数，infinite：一直播放
-		animation-duration: 1s; // 动画完成时间
-		
+        
+        
+		// animation-name: moveright; // 动画名称
+// 		animation-direction: alternate; // 动画在奇数次（1、3、5...）正向播放，在偶数次（2、4、6...）反向播放。
+// 		animation-timing-function: ease-in; // 动画执行方式，linear：匀速；ease：先慢再快后慢；ease-in：由慢速开始；ease-out：由慢速结束；ease-in-out：由慢速开始和结束；
+// 		animation-delay: 0s; // 动画延迟时间
+// 		animation-iteration-count: infinite; //  动画播放次数，infinite：一直播放
+// 		animation-duration: 1s; // 动画完成时间
+// 		
 		pointer-events: none;
 	}
 
@@ -56,7 +71,7 @@
         100%{
             width: 900px;
         }    
-/*        
+       
         10%{
             width: 500px;
         }    
@@ -65,17 +80,10 @@
         }    
         100%{
             width: 100px;
-        }     */
+        }     
         
         
-    } 
+    }  */
     
-    .cmp_img {
-        width: 1000px;
-        height: 500px;
-        
-        image-rendering: pixelated;
-        // image-rendering: crisp-edges;
-    } 
 
 }
