--- a/src/compare.scss
+++ b/src/compare.scss
@@ -1,26 +1,31 @@
-
+body {
+    margin: 0px;
+}
+#div_curObjN {
+    position: fixed;
+    top: 0px;
+    left: 50vw;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: orange;
+    text-shadow: 1px 1px white, 2px 2px black;
+    z-index: 300;
+}
 
 #div_n_medias_cont {
-    padding: 2px;
-    margin : 2px;
     border: 1px solid gray;
+    box-sizing: border-box;
 
     position: relative;
-    width: 90vw;
-    height: 80vh;
+    width: 100vw;
+    height: 100vh;
     
     .cmp_div {
-        
-        // ::after {
-        //     content: 'k';
-        //     font-size: 30px;
-        //     position: absolute;
-        //     right: 0px;
-        //     top: 0px;
-        // }
-        padding: 2px;
-        margin : 2px;
+        background-image: url('tbg.webp');
+
         border: 1px solid orange;
+        box-sizing: border-box;
         
         
         overflow: hidden;
@@ -47,54 +52,6 @@
         } 
     }
     
-    
-    
-    
-    // .cmp_div[n='1'] {
-    //     z-index: 100;
-    //     // width: 300px;
-    //     border-right: 2px solid red;
-    // }
-/*    
-    .cmp_div[n='1'] {
-        
-        
-		// animation-name: moveright; // 动画名称
-// 		animation-direction: alternate; // 动画在奇数次（1、3、5...）正向播放，在偶数次（2、4、6...）反向播放。
-// 		animation-timing-function: ease-in; // 动画执行方式，linear：匀速；ease：先慢再快后慢；ease-in：由慢速开始；ease-out：由慢速结束；ease-in-out：由慢速开始和结束；
-// 		animation-delay: 0s; // 动画延迟时间
-// 		animation-iteration-count: infinite; //  动画播放次数，infinite：一直播放
-// 		animation-duration: 1s; // 动画完成时间
-// 		
-		pointer-events: none;
-	}
-
-	@keyframes moveright {
-        0%{
-            width: 100px;
-        }
-        45%{
-            width: 100px;
-        }    
-        55%{
-            width: 900px;
-        }    
-        100%{
-            width: 900px;
-        }    
-       
-        10%{
-            width: 500px;
-        }    
-        90%{
-            width: 500px;
-        }    
-        100%{
-            width: 100px;
-        }     
-        
-        
-    }  */
     
 
 }
