--- a/src/style1.css
+++ b/src/style1.css
@@ -1,3 +1,26 @@
 .style1 {
     font-size: 10px;
 }
+
+
+
+#div_n_medias_cont {
+    position:relative;
+    width: 90vw;
+    height: 80vh;
+}
+.cmp_img {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+}
+.cmp_img[n='1'] {
+    z-index: 100;
+    width: 60%;
+    border-right: 2px solid red;
+}
