--- a/src/compare.scss
+++ b/src/compare.scss
@@ -10,6 +10,14 @@
     height: 80vh;
     
     .cmp_div {
+        
+        // ::after {
+        //     content: 'k';
+        //     font-size: 30px;
+        //     position: absolute;
+        //     right: 0px;
+        //     top: 0px;
+        // }
         padding: 2px;
         margin : 2px;
         border: 1px solid orange;
@@ -27,15 +35,18 @@
         max-height: 100%;
         
         transition: width 0.1s;
+        
+        
+        .cmp_obj {
+            // max-width: 100%;
+            // max-height: 100%;
+            // position: absolute;
+            
+            image-rendering: pixelated;
+            // image-rendering: crisp-edges;
+        } 
     }
     
-    .cmp_img , .cmp_vid {
-        max-width: 100%;
-        max-height: 100%;
-        
-        image-rendering: pixelated;
-        // image-rendering: crisp-edges;
-    } 
     
     
     
